store additional loading information for recentFiles